--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -1,7 +1,7 @@
-<!-- Metadata, OpenGraph and Schema.org -->
 {% include metadata.liquid %}
 
-<!-- Bootstrap & MDB -->
+<meta name="google-site-verification" content="9ZPXYp4L4L_kctkFboUMzoUV1gkIv16J3HgyHMum8aw" />
+
 <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url | bust_file_cache }}">
 <link
   rel="stylesheet"
@@ -11,7 +11,6 @@
 >
 
 {% if page.pretty_table %}
-  <!-- Bootstrap Table -->
   <link
     defer
     rel="stylesheet"
@@ -21,7 +20,6 @@
   >
 {% endif %}
 
-<!-- Fonts & Icons -->
 <link defer rel="stylesheet" href="{{ '/assets/css/academicons.min.css' | relative_url | bust_file_cache }}">
 <link defer rel="stylesheet" href="{{ '/assets/css/scholar-icons.css' | relative_url | bust_file_cache }}">
 <link
@@ -31,7 +29,6 @@
   href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
 >
 
-<!-- Code Syntax Highlighting -->
 <link
   defer
   rel="stylesheet"
@@ -41,14 +38,10 @@
 >
 
 {% if page.toc and page.toc.sidebar %}
-  <!-- Sidebar Table of Contents -->
   <link defer href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url | bust_file_cache }}" rel="stylesheet">
 {% endif %}
 
-<!-- Styles -->
-
 {% if page.pseudocode %}
-  <!-- pseudocode -->
   <link
     defer
     rel="stylesheet"
@@ -70,7 +63,6 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
 {% if site.enable_darkmode %}
-  <!-- Dark Mode -->
   <script src="{{ '/assets/js/theme.js' | relative_url | bust_file_cache }}"></script>
   <link
     defer
@@ -85,7 +77,6 @@
 {% endif %}
 
 {% if page.map %}
-  <!-- GeoJSON support via Leaflet -->
   <link
     defer
     rel="stylesheet"
@@ -96,7 +87,6 @@
 {% endif %}
 
 {% if page.code_diff %}
-  <!-- diff2html -->
   <link
     defer
     rel="stylesheet"
@@ -124,7 +114,6 @@
 
 {% if page.images %}
   {% if page.images.compare %}
-    <!-- Image comparison slider -->
     <link
       defer
       rel="stylesheet"
@@ -134,7 +123,6 @@
     >
   {% endif %}
   {% if page.images.lightbox2 %}
-    <!-- Lightbox2 -->
     <link
       defer
       rel="stylesheet"
@@ -144,16 +132,15 @@
     >
   {% endif %}
   {% if page.images.photoswipe %}
-    <!-- Photoswipe -->
     <link
       defer
       rel="stylesheet"
       href="{{ site.third_party_libraries.photoswipe.url.css }}"
+      integrity="{{ site.third_party_libraries.photoswipe.integrity.css }}"
       crossorigin="anonymous"
     >
   {% endif %}
   {% if page.images.slider %}
-    <!-- Image slider -->
     <link
       defer
       rel="stylesheet"
@@ -163,7 +150,6 @@
     >
   {% endif %}
   {% if page.images.spotlight %}
-    <!-- Spotlight -->
     <link
       defer
       rel="stylesheet"
@@ -173,7 +159,6 @@
     >
   {% endif %}
   {% if page.images.venobox %}
-    <!-- Venobox -->
     <link
       defer
       rel="stylesheet"
