--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -2,6 +2,16 @@
 
 <meta name="google-site-verification" content="9ZPXYp4L4L_kctkFboUMzoUV1gkIv16J3HgyHMum8aw" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PGXLD46847"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PGXLD46847');
+</script>
+
 <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url | bust_file_cache }}">
 <link
   rel="stylesheet"
